[tool.poetry]
name = "youtube-assistant"
version = "0.1.0"
description = ""
authors = ["Daniel Souza <me@posix.dev.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2023.7.6"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
